<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlack"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgBack"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:src="@drawable/ic_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/white"/>

    <ImageView
        android:id="@+id/imgDone"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:src="@drawable/ic_tick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white"/>

    <EditText
        android:id="@+id/etNoteTitle"
        android:padding="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/imgBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:background="@null"
        android:maxLines="1"
        android:ellipsize="end"
        android:inputType="text"
        android:fontFamily="@font/manrope_bold"
        android:textSize="@dimen/_14ssp"
        android:hint="@string/note_title"/>

    <TextView
        android:id="@+id/tvDateTime"
        app:layout_constraintTop_toBottomOf="@+id/etNoteTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:maxLines="1"
        android:ellipsize="end"
        android:fontFamily="@font/manrope_bold"
        android:textSize="@dimen/_8ssp"/>

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tvDateTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <View
            android:id="@+id/colorView"
            android:layout_width="@dimen/_5sdp"
            android:layout_height="match_parent"
            android:background="@color/blue"
            android:layout_marginStart="@dimen/_5sdp"/>

        <EditText
            android:id="@+id/etNoteSubTitle"
            android:padding="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="@dimen/_10ssp"
            android:background="@null"
            android:inputType="text"
            android:fontFamily="@font/manrope_regular"
            android:hint="@string/note_sub_title"/>


    </LinearLayout>
    <EditText
        android:id="@+id/etNoteDesc"
        android:padding="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/l1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:inputType="textMultiLine"
        android:fontFamily="@font/manrope_regular"
        android:textSize="@dimen/_14ssp"
        android:hint="@string/note_desc"/>
    <RelativeLayout
        android:id="@+id/layoutImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/l1">



        <ImageView
            android:id="@+id/imgNote"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300sdp"
            android:visibility="gone"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp" />

        <ImageView
            android:id="@+id/imgDelete"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_alignParentEnd="true"
            android:visibility="gone"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_delete" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutWebUrl"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/_10sdp"
        android:visibility="gone"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutImage"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/etWebLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:fontFamily="@font/manrope_regular"
                android:hint="@string/web_url"
                android:inputType="textMultiLine"
                android:padding="@dimen/_10sdp"
                android:text="http://"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/_12ssp" />
            <ImageView
                android:id="@+id/imgUrlDelete"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:visibility="gone"
                android:src="@drawable/ic_baseline_cancel_24" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="end"
            android:orientation="horizontal">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:fontFamily="@font/manrope_bold"
                android:background="@color/yellow"
                android:text="@string/cancel"
                android:textSize="@dimen/_12ssp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:id="@+id/btnCancel"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:fontFamily="@font/manrope_bold"
                android:background="@color/yellow"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textSize="@dimen/_12ssp"
                android:layout_marginStart="@dimen/_5sdp"
                android:textColor="@color/white"
                android:id="@+id/btnOk"/>


        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvWebLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:ellipsize="end"
        android:visibility="gone"
        android:fontFamily="@font/manrope_bold"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:textSize="@dimen/_12ssp"
        android:autoLink="web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutWebUrl" />

<!--    <EditText-->
<!--        android:id="@+id/etNoteDesc"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="@dimen/_10sdp"-->
<!--        android:background="@null"-->
<!--        android:fontFamily="@font/manrope_regular"-->
<!--        android:hint="@string/notes_desc"-->
<!--        android:inputType="textMultiLine"-->
<!--        android:padding="@dimen/_10sdp"-->
<!--        android:textColor="@color/ColorWhite"-->
<!--        android:textColorHint="@color/ColorGray"-->
<!--        android:textSize="@dimen/_12ssp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/tvWebLink" />-->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imgMore"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_gravity="center"
            android:src="@drawable/img_bar" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>